--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   animated_splash_screen: ^1.3.0
   rive: ^0.12.4
   flutter_svg: ^2.0.9
+  table_calendar: ^3.0.9
+  flutter_time_picker_spinner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
