--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   table_calendar: ^3.0.9
   flutter_time_picker_spinner: ^2.0.0
   awesome_notifications: ^0.8.2
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
