Progress Tracking update

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_time_picker_spinner: ^2.0.0
   awesome_notifications: ^0.8.2
   http: ^1.1.0
+  fl_chart: ^0.66.2
 
 dev_dependencies:
   flutter_test:
