--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/confirmation-popup.png
     - assets/submit-button.png
     - assets/bubble-tint.png
     - assets/add-task-bubble.png
