--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: aquaria
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using flutter pub publish. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: ">=3.2.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,6 +47,7 @@ dependencies:
   http: ^1.1.0
   fl_chart: ^0.66.2
   delayed_widget: ^1.1.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +65,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -106,6 +105,22 @@ flutter:
     - assets/fish/pufferfish.svg
     - assets/fish/salmon.svg
     - assets/fish/clownfish.svg
+    - assets/fish/goldfish.svg
+    - assets/fish/swordfish.svg
+    - assets/fish/maskedbutterfly.svg
+    - assets/fish/threadfinbutterflyfish.svg
+    - assets/fish/shark.svg
+    - assets/fish/redsnapperfish.svg
+    - assets/fish/stingray_black.svg
+    - assets/fish/pufferfish_black.svg
+    - assets/fish/clownfish_black.svg
+    - assets/fish/salmon_black.svg
+    - assets/fish/swordfish_black.svg
+    - assets/fish/maskedbutterfly_black.svg
+    - assets/fish/threadfinbutterflyfish_black.svg
+    - assets/fish/goldfish_black.svg
+    - assets/fish/shark_black.svg
+    - assets/fish/redsnapperfish_black.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
